--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,9 @@ language: scala
 scala:
     - 2.12.1
 script:
-    - sbt clean coverage test
+    - ./buildWithCoverage.sh
     - sbt coveralls
 jdk:
   - oraclejdk8
-
 after_success:
   - bash <(curl -s https://codecov.io/bash)
